# tauri-vben-admin

./: .env.example  API_GUIDE.md  CONFIG_MANAGEMENT.md  EXTERNAL_CONFIG_GUIDE.md  HOME_DASHBOARD_UPDATE.md  PROJECT_SUMMARY.md  QUICK_START.md  UI_FEATURES_GUIDE.md  build-guide.md  components.d.ts  config.local.toml  config.toml  index.html  package.json  pnpm-lock.yaml  quick-windows-build.md  test_api.sh  tsconfig.json  vite.config.ts  windows-build-guide.md
.github/workflows/: release.yml
docs/: vben-distribution-analysis.md  vben-selective-integration.md  what-we-built.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api.rs  config.rs  influxdb.rs  kafka.rs  lib.rs  mariadb.rs  models.rs  services.rs
src/views/: ApiTest.vue  Config.vue  Dashboard.vue  Home.vue
